_deployment/kubernetes/gateway-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 2
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: jaimetruman/sxs-gateway
          ports:
            - containerPort: 8080
          resources: { }
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: gateway
