_deployment/kubernetes/mysql-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
        app: mysql-gateway
  template:
    metadata:
      labels:
        app: mysql-gateway
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          command:
            - sh
            - -c
            - ' echo ''CREATE DATABASE IF NOT EXISTS sxs_gateway;'' > /docker-entrypoint-initdb.d/init.sql; /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci '
          image: mysql:8
          name: mysql-gateway
          ports:
            - containerPort: 3306
          resources: { }
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-gateway
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-gateway
