_deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:  
  - http:
      paths:
      - path: /rabbitmq(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
              
      - path: /gateway(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
        
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: client-order-event-dispatcher
            port:
              number: 4000
